{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "PlayerInput",
            "id": "755f3b83-60e7-4fa8-9a1a-e0c626ab79f7",
            "actions": [
                {
                    "name": "LaunchBall",
                    "type": "Button",
                    "id": "be552001-d88d-4086-8cd4-3e5f5a8a4695",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "8ba51914-a487-4cc8-9130-4268d70a30d5",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LaunchBall",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "63e1681e-6b24-46c6-85f3-8b86c449a46d",
                    "path": "<Touchscreen>/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LaunchBall",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}